# RetailGlue

./: .gitignore  README.md  config.yaml  index.html  paper.tex  pyproject.toml  run_benchmark.py  run_interface.py  train_lightglue.py
data/benchmark/: images
retailglue/: __init__.py  config.py  detector.py  embeddings.py  entities.py  io.py  visualization.py
retailglue/benchmark/: __init__.py  constants.py  drawer.py  evaluation.py  runner.py  stats.py
retailglue/matchers/: __init__.py  bfmatcher.py  gluestick.py  hf_model.py  lightglue.py  lightgluestick.py  roma.py
retailglue/stitching/: __init__.py  blender.py  stitcher.py  transforms.py
retailglue/training/: __init__.py  dataset.py  losses.py  metrics.py  trainer.py
scripts/: download_benchmark_dataset.py  download_lightglue_dataset.py
