[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retailglue"
version = "1.0.0"
description = "RetailGlue: Semantic Product-Level Image Stitching for Retail Shelf Panoramas"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "RetailGlue Authors"},
]

dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "torch>=2.0",
    "torchvision>=0.15",
    "networkx>=3.0",
    "shapely>=2.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "lap>=0.4",
    "ultralytics>=8.0",
    "gradio>=4.0",
    "torchmetrics>=1.9.0",
    "termcolor>=3.3.0",
    "transformers>=5.5.4",
    "kornia>=0.8.2",
]

[project.optional-dependencies]
roma = ["romav2"]
# gluestick and lightgluestick are research packages not on PyPI.
# Install manually from source: https://github.com/cvg/GlueStick
hf = ["transformers>=4.40"]
all = [
    "romav2",
    "transformers>=4.40",
]
dev = [
    "pytest>=7.0",
    "xlsxwriter>=3.0",
]

[project.scripts]
retailglue-benchmark = "run_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["retailglue"]
